--- a/docs/content/devguide/100-contributions.adoc
+++ b/docs/content/devguide/100-contributions.adoc
@@ -6,6 +6,17 @@ GeoWave is an open source project and we welcome contributions from the communit
 
 === Pull Requests
 
+Pull requests from non ngageoint member must be done though a forked repository.
+
+To create a new fork, just click the the "Fork" button at the top of the GeoWave GitHub page. You can now submit
+pull requests from your working branch on your fork directly to the master branch on ngageoint.
+
+GeoWave uses a manven plugin formatter to keep all of our code standardized. You should run a maven install 
+immediately prior to committing and pushing changes. 
+
+Prior to submitting a pull request, please squash down your commits into one. This will help keep our commit history clean 
+and cut down on "in progress commits" that don't relay any helpful information in the future.  
+
 All pull request contributions to this project will be released under the Apache 2.0 license.
 
 Software source code previously released under an open source license and then modified by NGA staff is considered a
